--- a/src/package.json
+++ b/src/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "test-project",
+  "name": "nodejs-docker-kb-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "(https://github.com/simondereuver/kub-testing)"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2"
+  }
 }
